...
  ~ You should have received a copy of the GNU General Public License
  ~ along with RedReader.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">RedReader</string>

    <!-- First Run Dialog -->

    <string name="firstrun_login_title">Log in</string>
    <string name="firstrun_login_message">You are not currently logged in. You can access the account list by selecting "Accounts" from the menu.</string>
    <string name="firstrun_login_button_now">Log in now</string>
...

    <!-- Options Menu -->

    <string name="options_accounts">Accounts</string>
    <string name="options_accounts_long">Reddit Accounts</string>
    <string name="options_theme">Themes</string>
    <string name="options_settings">Settings</string>

    <string name="options_submit_post">Submit Post</string>

    <string name="options_refresh">Refresh</string>
    <string name="options_refresh_subreddits">Refresh Subreddits</string>
    <string name="options_refresh_posts">Refresh Posts</string>
...
	<string name="pm_reply_done">Reply sent.</string>

	<!-- 2017-02-15 -->
	<string name="mainmenu_popular">Popular Subreddits</string>

	<!-- 2017-02-23 -->
	<string name="action_back">Back</string>

	<!-- 2017-03-02 -->
	<string name="pref_menus_link_context_items_key" translatable="false">pref_menus_link_context_items</string>
	<string name="pref_menus_link_context_items_title">Link action menu items</string>
	<string name="lang_eo" translatable="false">Esperanto</string>
	<string name="lang_pl" translatable="false">Polski</string>
...
	<string name="cache_clear_dialog_thumbnails">Thumbnails</string>
	<string name="cache_clear_dialog_thumbnails_data">Thumbnails (%s)</string>
	<string name="cache_clear_dialog_images">Images</string>
	<string name="cache_clear_dialog_images_data">Images (%s)</string>
	<string name="cache_clear_dialog_flags">Flags</string>

	<string name="three_dots_menu">More options</string>

	<!-- 2020-11-19 -->
	<string name="pref_images_thumbnail_size_key" translatable="false">pref_images_thumbnail_size_key</string>
	<string name="pref_images_thumbnail_size_title">Thumbnail size</string>

	<!-- 2020-11-20 -->
...
