<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/link_border"
	android:padding="8dp">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="12dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		app:srcCompat="?rrIconLink"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="vertical">

		<TextView
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="15sp"/>

		<TextView
			android:id="@+id/subtitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="12sp"/>

	</LinearLayout>

</LinearLayout>
