<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:liftOnScroll="false">

		<com.google.android.material.appbar.MaterialToolbar
				android:id="@+id/rr_actionbar_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/rrActionBarCol"
				app:titleTextAppearance="@style/RR.Toolbar.TitleText"
				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
				app:popupTheme="?rrActionBarPopupThemeStyle" />

	</com.google.android.material.appbar.AppBarLayout>

	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/rr_actionbar_content_listing" />

		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/rr_actionbar_content_overlay" />

	</FrameLayout>

</LinearLayout>
