...
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:scaleType="fitCenter"
			tools:ignore="ContentDescription"/>

	<TextView
			android:id="@+id/actionbar_title_text"
			android:maxLines="1"
			android:ellipsize="end"
			android:scrollHorizontally="true"
			android:singleLine="true"
			style="@style/RR.Toolbar.TitleText"
			android:layout_toEndOf="@id/actionbar_title_back_image"
...
